--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-589-lugx-gaming
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li><a href="index.html" class="active">Home</a></li>
-                      <li><a href="shopss.html">Our Team</a></li>
+                      <li><a href="#">Our Team</a></li>
                       <li><a href="dashboard.html">DashBoard</a></li>
               
                   </ul>   
